// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input props: disabled 1`] = `
.c0 {
  height: 32px;
  cursor: text;
  width: 16.666666666666668em;
  border-radius: 4px;
  border: 1px solid #e8e8e8;
  line-height: 1.5;
  font-size: 1.2rem;
  display: inline-block;
  padding: 0 0.8333333333333334em;
  font-family: inherit;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  -webkit-tap-highlight-color: rgba(0,0,0,0);
  background-image: none;
  color: rgb(51,51,51);
  outline: none;
}

.c0:hover {
  border-color: #cccccc;
}

.c0::-webkit-input-placeholder {
  color: rgba(0,0,0,0.25);
}

.c0::-moz-placeholder {
  color: rgba(0,0,0,0.25);
}

.c0:-ms-input-placeholder {
  color: rgba(0,0,0,0.25);
}

.c0::placeholder {
  color: rgba(0,0,0,0.25);
}

.c0:focus {
  border-color: #684fff;
  box-shadow: 0 0 6px rgba(104,79,255,0.2);
}

<input
  className="c0"
  disabled={false}
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyPress={[Function]}
  onKeyUp={[Function]}
  placeholder={undefined}
  prefix={undefined}
  size="default"
  value=""
/>
`;

exports[`Input props: disabled 2`] = `
.c0 {
  background: #f2f2f2;
  height: 32px;
  cursor: not-allowed;
  width: 16.666666666666668em;
  border-radius: 4px;
  border: 1px solid #e8e8e8;
  line-height: 1.5;
  font-size: 1.2rem;
  display: inline-block;
  padding: 0 0.8333333333333334em;
  font-family: inherit;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  -webkit-tap-highlight-color: rgba(0,0,0,0);
  background-image: none;
  color: rgb(51,51,51);
  outline: none;
}

.c0:hover {
  border-color: #cccccc;
}

.c0::-webkit-input-placeholder {
  color: rgba(0,0,0,0.25);
}

.c0::-moz-placeholder {
  color: rgba(0,0,0,0.25);
}

.c0:-ms-input-placeholder {
  color: rgba(0,0,0,0.25);
}

.c0::placeholder {
  color: rgba(0,0,0,0.25);
}

.c0:focus {
  border-color: #684fff;
  box-shadow: 0 0 6px rgba(104,79,255,0.2);
}

<input
  className="c0"
  disabled={true}
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyPress={[Function]}
  onKeyUp={[Function]}
  placeholder={undefined}
  prefix={undefined}
  size="default"
  value=""
/>
`;

exports[`Input props: getTheme: width:100,margin:10, 1`] = `
.c0 {
  height: 32px;
  cursor: text;
  margin: 0.8333333333333334em;
  width: 8.333333333333334em;
  border-radius: 4px;
  border: 1px solid #e8e8e8;
  line-height: 1.5;
  font-size: 1.2rem;
  display: inline-block;
  padding: 0 0.4166666666666667em;
  font-family: inherit;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  -webkit-tap-highlight-color: rgba(0,0,0,0);
  background-image: none;
  color: rgb(51,51,51);
  outline: none;
}

.c0:hover {
  border-color: #cccccc;
}

.c0::-webkit-input-placeholder {
  color: rgba(0,0,0,0.25);
}

.c0::-moz-placeholder {
  color: rgba(0,0,0,0.25);
}

.c0:-ms-input-placeholder {
  color: rgba(0,0,0,0.25);
}

.c0::placeholder {
  color: rgba(0,0,0,0.25);
}

.c0:focus {
  border-color: #684fff;
  box-shadow: 0 0 6px rgba(104,79,255,0.2);
}

<span
  className={undefined}
>
  <input
    className="c0"
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    placeholder={undefined}
    prefix={undefined}
    size="default"
    value=""
  />
</span>
`;

exports[`Input props: null 1`] = `
.c0 {
  height: 32px;
  cursor: text;
  width: 16.666666666666668em;
  border-radius: 4px;
  border: 1px solid #e8e8e8;
  line-height: 1.5;
  font-size: 1.2rem;
  display: inline-block;
  padding: 0 0.8333333333333334em;
  font-family: inherit;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  -webkit-tap-highlight-color: rgba(0,0,0,0);
  background-image: none;
  color: rgb(51,51,51);
  outline: none;
}

.c0:hover {
  border-color: #cccccc;
}

.c0::-webkit-input-placeholder {
  color: rgba(0,0,0,0.25);
}

.c0::-moz-placeholder {
  color: rgba(0,0,0,0.25);
}

.c0:-ms-input-placeholder {
  color: rgba(0,0,0,0.25);
}

.c0::placeholder {
  color: rgba(0,0,0,0.25);
}

.c0:focus {
  border-color: #684fff;
  box-shadow: 0 0 6px rgba(104,79,255,0.2);
}

<input
  className="c0"
  disabled={false}
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyPress={[Function]}
  onKeyUp={[Function]}
  placeholder={undefined}
  prefix={undefined}
  size="default"
  value=""
/>
`;

exports[`Input props: placeholder  1`] = `
.c0 {
  height: 32px;
  cursor: text;
  width: 16.666666666666668em;
  border-radius: 4px;
  border: 1px solid #e8e8e8;
  line-height: 1.5;
  font-size: 1.2rem;
  display: inline-block;
  padding: 0 0.8333333333333334em;
  font-family: inherit;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  -webkit-tap-highlight-color: rgba(0,0,0,0);
  background-image: none;
  color: rgb(51,51,51);
  outline: none;
}

.c0:hover {
  border-color: #cccccc;
}

.c0::-webkit-input-placeholder {
  color: rgba(0,0,0,0.25);
}

.c0::-moz-placeholder {
  color: rgba(0,0,0,0.25);
}

.c0:-ms-input-placeholder {
  color: rgba(0,0,0,0.25);
}

.c0::placeholder {
  color: rgba(0,0,0,0.25);
}

.c0:focus {
  border-color: #684fff;
  box-shadow: 0 0 6px rgba(104,79,255,0.2);
}

<input
  className="c0"
  disabled={false}
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyPress={[Function]}
  onKeyUp={[Function]}
  placeholder="请填写内容"
  prefix={undefined}
  size="default"
  value=""
/>
`;

exports[`Input props: placeholder  2`] = `
.c0 {
  height: 32px;
  cursor: text;
  width: 16.666666666666668em;
  border-radius: 4px;
  border: 1px solid #e8e8e8;
  line-height: 1.5;
  font-size: 1.2rem;
  display: inline-block;
  padding: 0 0.8333333333333334em;
  font-family: inherit;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  -webkit-tap-highlight-color: rgba(0,0,0,0);
  background-image: none;
  color: rgb(51,51,51);
  outline: none;
}

.c0:hover {
  border-color: #cccccc;
}

.c0::-webkit-input-placeholder {
  color: rgba(0,0,0,0.25);
}

.c0::-moz-placeholder {
  color: rgba(0,0,0,0.25);
}

.c0:-ms-input-placeholder {
  color: rgba(0,0,0,0.25);
}

.c0::placeholder {
  color: rgba(0,0,0,0.25);
}

.c0:focus {
  border-color: #684fff;
  box-shadow: 0 0 6px rgba(104,79,255,0.2);
}

<input
  className="c0"
  disabled={false}
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyPress={[Function]}
  onKeyUp={[Function]}
  placeholder=""
  prefix={undefined}
  size="default"
  value=""
/>
`;

exports[`Input props: size 1`] = `
.c0 {
  height: 28px;
  cursor: text;
  width: 16.666666666666668em;
  border-radius: 4px;
  border: 1px solid #e8e8e8;
  line-height: 1.5;
  font-size: 1.2rem;
  display: inline-block;
  padding: 0 0.8333333333333334em;
  font-family: inherit;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  -webkit-tap-highlight-color: rgba(0,0,0,0);
  background-image: none;
  color: rgb(51,51,51);
  outline: none;
}

.c0:hover {
  border-color: #cccccc;
}

.c0::-webkit-input-placeholder {
  color: rgba(0,0,0,0.25);
}

.c0::-moz-placeholder {
  color: rgba(0,0,0,0.25);
}

.c0:-ms-input-placeholder {
  color: rgba(0,0,0,0.25);
}

.c0::placeholder {
  color: rgba(0,0,0,0.25);
}

.c0:focus {
  border-color: #684fff;
  box-shadow: 0 0 6px rgba(104,79,255,0.2);
}

<input
  className="c0"
  disabled={false}
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyPress={[Function]}
  onKeyUp={[Function]}
  placeholder={undefined}
  prefix={undefined}
  size="small"
  value=""
/>
`;

exports[`Input props: size 2`] = `
.c0 {
  height: 38px;
  cursor: text;
  width: 16.666666666666668em;
  border-radius: 4px;
  border: 1px solid #e8e8e8;
  line-height: 1.5;
  font-size: 1.2rem;
  display: inline-block;
  padding: 0 0.8333333333333334em;
  font-family: inherit;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  -webkit-tap-highlight-color: rgba(0,0,0,0);
  background-image: none;
  color: rgb(51,51,51);
  outline: none;
}

.c0:hover {
  border-color: #cccccc;
}

.c0::-webkit-input-placeholder {
  color: rgba(0,0,0,0.25);
}

.c0::-moz-placeholder {
  color: rgba(0,0,0,0.25);
}

.c0:-ms-input-placeholder {
  color: rgba(0,0,0,0.25);
}

.c0::placeholder {
  color: rgba(0,0,0,0.25);
}

.c0:focus {
  border-color: #684fff;
  box-shadow: 0 0 6px rgba(104,79,255,0.2);
}

<input
  className="c0"
  disabled={false}
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyPress={[Function]}
  onKeyUp={[Function]}
  placeholder={undefined}
  prefix={undefined}
  size="large"
  value=""
/>
`;

exports[`Input props: validateStatus 1`] = `
.c0 {
  height: 32px;
  cursor: text;
  width: 16.666666666666668em;
  border-radius: 4px;
  border: 1px solid #e8e8e8;
  line-height: 1.5;
  font-size: 1.2rem;
  display: inline-block;
  padding: 0 0.8333333333333334em;
  font-family: inherit;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  -webkit-tap-highlight-color: rgba(0,0,0,0);
  background-image: none;
  color: rgb(51,51,51);
  outline: none;
}

.c0:hover {
  border-color: #cccccc;
}

.c0::-webkit-input-placeholder {
  color: rgba(0,0,0,0.25);
}

.c0::-moz-placeholder {
  color: rgba(0,0,0,0.25);
}

.c0:-ms-input-placeholder {
  color: rgba(0,0,0,0.25);
}

.c0::placeholder {
  color: rgba(0,0,0,0.25);
}

.c0:focus {
  border-color: #684fff;
  box-shadow: 0 0 6px rgba(104,79,255,0.2);
}

<input
  className="c0"
  disabled={false}
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyPress={[Function]}
  onKeyUp={[Function]}
  placeholder={undefined}
  prefix={undefined}
  size="default"
  value=""
/>
`;

exports[`Input props: validateStatus 2`] = `
.c0 {
  height: 32px;
  cursor: text;
  width: 16.666666666666668em;
  border-radius: 4px;
  border: 1px solid #f22735;
  line-height: 1.5;
  font-size: 1.2rem;
  display: inline-block;
  padding: 0 0.8333333333333334em;
  font-family: inherit;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  -webkit-tap-highlight-color: rgba(0,0,0,0);
  background-image: none;
  color: rgb(51,51,51);
  outline: none;
}

.c0:hover {
  border-color: #f22735;
}

.c0::-webkit-input-placeholder {
  color: rgba(0,0,0,0.25);
}

.c0::-moz-placeholder {
  color: rgba(0,0,0,0.25);
}

.c0:-ms-input-placeholder {
  color: rgba(0,0,0,0.25);
}

.c0::placeholder {
  color: rgba(0,0,0,0.25);
}

.c0:focus {
  border-color: #684fff;
  box-shadow: 0 0 6px rgba(248,172,48,0.2);
}

<input
  className="c0"
  disabled={false}
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyPress={[Function]}
  onKeyUp={[Function]}
  placeholder={undefined}
  prefix={undefined}
  size="default"
  value=""
/>
`;
